@@ -51,6 +51,7 @@
     <implements rdf:resource="https://www.rfc-editor.org/info/rfc6121"/>
     <implements rdf:resource="https://www.rfc-editor.org/info/rfc6122"/>
     <implements rdf:resource="https://www.rfc-editor.org/info/rfc6455"/>
+    <implements rdf:resource="https://www.rfc-editor.org/info/rfc7301"/>
     <implements rdf:resource="https://www.rfc-editor.org/info/rfc7395"/>
     <!-- Added in hg:0bbbc9042361 released in 0.6.0 -->
     <implements rdf:resource="https://datatracker.ietf.org/doc/draft-cridland-xmpp-session/"/>
